--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Football</title>
   </head>
-  <body></body>
+  <body>
+      <!-- header section -->
+      <header>
+        <div class="container">
+
+          <div class="title">
+            <h1>Conmebol Copa America 2021</h1>
+            <a class="watch-button" target="_blank" href="https://www.google.com/">Watch Live ></a>
+          </div>
+
+          <div class="banner-img">
+            <img src="images/banner.png" alt="" />
+          </div>
+        </div>
+      </header>
+    </main>
+  </body>
 </html>
