--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/b64ddb9e89.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css" />
     <title>Football</title>
   </head>
   <body>
     <!-- header start -->
     <header>
-      <div class="container">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Our Player</a>
+            <a href="#">Match</a>
+            <a href="#">Contact Us</a>
+        </nav>
+      <div class="container header">
         <div class="title">
           <h1>Conmebol Copa America 2021</h1>
           <a class="watch-button" target="_blank" href="https://www.google.com/">Watch Live ></a>
@@ -23,9 +30,9 @@
     </header>
     <!-- header end -->
 
-    <!-- Article start -->
-    <article>
-      <div class="players">
+    <!-- main start -->
+    <main>
+      <div class="players container">
         <div class="player">
           <img src="images/players/player-1.png" alt="" />
           <h3>Mesut Ozil</h3>
@@ -130,6 +137,31 @@
           </p>
         </div>
       </div>
-    </article>
+    </main>
+    <!-- main end -->
+    <section>
+        <div class="match">
+            <div class="title-copa">
+                <h2>All Highlights 
+                    Copa America 2021</h2>
+                    <p>In 1986, CONMEBOL decided to return to having one country host the tournament and to contest it every other year. From 1987 until 2001, the event was hosted every two years in rotation by the ten members of the confederation. ... The 1993 Copa América tournament in Ecuador would take its current form.</p>
+            </div>
+            <div class="copa-img"><img src="images/match.png"alt="match pic"> </div>
+        </div>
+    </section>
+
+    <!-- footer start -->
+    <footer class="foot">
+        <img class="logo" src="images/Logo.png" alt="" />
+
+        <p><i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-whatsapp-square"></i>
+            <i class="fab fa-snapchat"></i></p>
+        <p>Copyright © 2021 Football</p>
+      </div>
+    </footer>
+    <!-- footer end -->
   </body>
 </html>
